--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "homepage": "https://github.com/xwp/customizer-dev-tools#readme",
   "devDependencies": {
-    "eslint": "^3.3.0"
+    "eslint": "^3.0.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-shell": "~1.3.0",
+    "grunt-wp-deploy": "^1.1.0"
   }
 }
